2009-09-10  Claudio Saavedra  <csaavedra@igalia.com>

	Update the application menu flag for application-wise windows

	* hildon/hildon-program.c: (+hildon_program_on_common_app_menu_changed),
	(hildon_program_set_common_app_menu): Also take into account the visibility
	of its items.

2009-09-10  Claudio Saavedra  <csaavedra@igalia.com>

	Emit HildonAppMenu::changed when menu items change visibility

	* hildon/hildon-app-menu.c: (item_visibility_changed),
	(filter_visibility_changed): Also emit ::changed on
	visibility of items changed.

2009-09-10  Claudio Saavedra  <csaavedra@igalia.com>

	Do not set the menu flag in a window when a menu is empty

	* hildon/hildon-window.c: (hildon_window_update_menu_flag),
	(on_menu_changed), (on_menu_changedhildon_window_set_main_menu),
	(on_menu_changed), (hildon_window_set_main_menu): Update on menu
	changes by using the HildonAppMenu::changed signal.

2009-09-10  Claudio Saavedra  <csaavedra@igalia.com>

	Add HildonAppMenu::changed signal

	* hildon/hildon-app-menu.c: (hildon_app_menu_insert),
	(hildon_app_menu_add_filter), (hildon_app_menu_class_init):
	Emit a new HildonAppMenu:changed signal when there are changes in
	the menu children.

2009-09-10  Claudio Saavedra  <csaavedra@igalia.com>

	Add hildon_app_menu_has_visible_children() private method

	* hildon/hildon-app-menu-private.h: Add below private method.
	* hildon/hildon-app-menu.c: (hildon_app_menu_has_visible_children):
	New method to check the visibility of a HildonAppMenu children.

2009-09-09  Claudio Saavedra  <csaavedra@igalia.com>

	Set the window menu flag for application-common menus

	* hildon/hildon-program.c:
	(+hildon_program_window_set_common_menu_flag): Set or remove the
	menu flag from a window only this doesn't have its own menu.
	(+hildon_program_set_common_menu_flag): adjust menu flag for
	all windows in the program.
	(hildon_program_add_window),
	(hildon_program_remove_window): add/remove the menu flag when
	a window is added to the program.
